# cmd/interfaces/controller/health_check_controller.go
@@ -14,6 +14,14 @@ func NewHealthCheckController(interactor usecases.HealthCheckInteractor) *Health
 	return &HealthCheckController{interactor}
 }
 
+// HealthCheck godoc
+// @Summary      Performs a health check
+// @Description  Endpoint to perform a health check and verify the service status
+// @Tags         health
+// @Accept       json
+// @Produce      json
+// @Success      200 {object} usecases.HealthStatus "Health check result"
+// @Router       /health [get]
 func (h *HealthCheckController) HealthCheck(c *gin.Context) {
 	result := h.interactor.PerformHealthCheck()
 	c.JSON(http.StatusOK, result)
